@@ -103,9 +103,6 @@ AC_DEFINE([DNS_HEAP_SIZE], 256, [Size of the dns heap.])
 # Argument processing.
 AX_ARG_ENABLE_IOLOOP_MECHANISM
 AX_ARG_DISABLE_BLOCK_ALLOC
-AX_ARG_DISABLE_SHARED_MODULES
-AX_ARG_WITH_NICKLEN
-AX_ARG_WITH_TOPICLEN
 AX_ARG_ENABLE_HALFOPS
 AX_ARG_ENABLE_DEBUGGING
 AX_ARG_ENABLE_WARNINGS
