@@ -88,6 +88,20 @@ serverinfo {
 	/* max_clients: the maximum number of clients allowed to connect */
 	max_clients = 512;
 
+
+	/*
+	 * max_nick_length: only applies to local clients. Must be in the
+	 * range of 9 to 30. Default is 9 if nothing else is specified.
+	 */
+	max_nick_length = 9;
+
+	/*
+	 * max_topic_length: only applies to topics set by local clients.
+	 * Must be in the range of 80 to 300. Default is 80 if nothing
+	 * else is specified.
+	 */
+        max_topic_length = 160;
+
 	/*
 	 * rsa key: the path to the file containing our rsa key for cryptlink.
 	 *
