@@ -93,7 +93,21 @@ serverinfo {
 	max_clients = 512;
 
 	/*
-	 * rsa key: the path to the file containing our rsa key for cryptlink.
+	 * max_nick_length: only applies to local clients. Must be in the
+	 * range of 9 to 30. Default is 9 if nothing else is specified.
+	 */
+	max_nick_length = 9;
+
+	/*
+	 * max_topic_length: only applies to topics set by local clients.
+	 * Must be in the range of 80 to 300. Default is 80 if nothing
+	 * else is specified.
+	 */
+	max_topic_length = 160
+
+	/*
+	 * rsa_private_key_file: the path to the file containing our
+	 * rsa key for cryptlink.
 	 *
 	 * Example command to store a 2048 bit RSA keypair in
 	 * rsa.key, and the public key in rsa.pub:
