@@ -46,6 +46,8 @@ serverinfo {
 	#vhost = "192.169.0.1";
 	#vhost6 = "3ffe:80e8:546::2";
 	max_clients = 512;
+	max_nick_length = 9;
+	max_topic_length = 160;
 	#rsa_private_key_file = "/usr/local/ircd/etc/rsa.key";
 	#ssl_certificate_file = "/usr/local/ircd/etc/cert.pem";
 	#ssl_server_method = tlsv1, sslv3;
