@@ -212,6 +212,8 @@ max_clients     { return T_MAX_CLIENTS; }
 max_ident	{ return MAX_IDENT; }
 max_local	{ return MAX_LOCAL; }
 max_global	{ return MAX_GLOBAL; }
+max_nick_length { return MAX_NICK_LENGTH; }
+max_topic_length { return MAX_TOPIC_LENGTH; }
 max_number	{ return MAX_NUMBER; }
 max_watch       { return MAX_WATCH; }
 message_locale	{ return MESSAGE_LOCALE; }
